# Cyron

./: CMakeLists.txt  README.md  main.cpp
data/: fashion_mnist_y2.txt  mnist_x.txt  mnist_x_scaled.txt
includes/: convolutionalnn.h  exploration.h  standardnn.h  time_counting.h
src/: convolutionalnn.cpp  exploration.cpp  standardnn.cpp
tutorials/: cnn.cpp  cnn.h  snn.cpp  snn.h
